<resources>
    <string name="app_name">Material Android</string>

    <string name="photoOfTheDayStub">Фото дня</string>
    <string name="searchWiki">Найти в Википедии</string>
    <string name="wikiHelperText">Поищите термин в Википедии</string>
    <string name="favourite">Избранное</string>
    <string name="settings">Настройки</string>
    <string name="search">Поиск</string>
    <string name="pressImageText">Удерживайте картинку для просмотра описания.</string>
    <string name="example_text_default">Default</string>
    <string name="example_text_entry">Entry</string>
    <string name="example_text_choice">Choice</string>
    <string name="example_text_action">Action</string>
    <string name="example_text_filter">Filter</string>
    <string name="theme_chooser_label">Тема приложения</string>
    <string name="mars">Марс</string>
    <string name="uranus">Уран</string>
    <string name="mercury">Меркурий</string>
    <string name="THEME_KEY">SomeThemeKey</string>
    <string name="systemTheme">Системная</string>
    <string name="historyAPOD">History</string>
    <string name="bottom_menu_viewPagerFragmentTitle">ViewPagerFragment</string>
    <string name="bottom_menu_onSecondScreenTitle">На второй экран (пустышка)</string>
    <string name="open_video_hint">Нажмите на картинку для просмотра видео</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="collapsingtb_amp_animations"><![CDATA[CollapsingTB&Animations]]></string>
    <string name="nasa">NASA</string>
    <string name="choose_date">Выберите дату</string>
    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin ut vestibulum lacus, eget auctor augue. Integer suscipit aliquet odio, non faucibus libero maximus facilisis. Curabitur.</string>
    <string name="recycler_and_useless_notes">Recycler and useless notes</string>
    <string name="DIALOG_KEY">DIALOG_KEY</string>
    <string name="RESULT_KEY">RESULT_KEY</string>
    <string name="editNoteSave">Сохранить</string>
    <string name="useless_notes_in_apod">Useless Notes in APOD</string>
    <string name="notes_reset">Сброс</string>
    <string name="notes_filter_by_date">По дате</string>
    <string name="notes_filter_by_important">По важному</string>
    <string name="notes_filter_by_word">По слову</string>
    <string name="add">Add</string>

</resources>