<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/notesReset"
        android:icon="@drawable/ic_baseline_history_24"
        android:title="@string/notes_reset"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/notesSortByDate"
        android:icon="@drawable/ic_calendar"
        android:title="@string/notes_filter_by_date"
        app:showAsAction="never" />

    <item
        android:id="@+id/notesSortByImportant"
        android:icon="@drawable/ic_star_filled"
        android:title="@string/notes_filter_by_important"
        app:showAsAction="never" />

    <item
        android:id="@+id/notesSortByWord"
        android:icon="@drawable/ic_text"
        android:title="@string/notes_filter_by_word"
        app:showAsAction="never" />


</menu>